tests/golden/fixtures/syntax-symbolic-subscripts-err-aggregate-expression-index-no-similar/expected.err
Error: invalid index on symbolic subscript array 'foo': use '.field' or '[.field]'
   ╭─[ tests/golden/fixtures/syntax-symbolic-subscripts-err-aggregate-expression-index-no-similar/input.k65:7:5 ]
   │
 7 │     lda foo[buffer]
   │     ───────┬───────  
   │            ╰───────── here
   │ 
   │ Help: only named field access is allowed on symbolic subscript arrays
───╯
